--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,18 @@
-/* fredoka-regular - latin */
-@font-face {
-  font-family: 'Fredoka';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/fredoka-v9-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/fredoka-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/fredoka-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/fredoka-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/fredoka-v9-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/fredoka-v9-latin-regular.svg#Fredoka') format('svg'); /* Legacy iOS */
-}
-/* fredoka-700 - latin */
-@font-face {
-  font-family: 'Fredoka';
-  font-style: normal;
-  font-weight: 700;
-  src: url('../fonts/fredoka-v9-latin-700.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/fredoka-v9-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/fredoka-v9-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/fredoka-v9-latin-700.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/fredoka-v9-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/fredoka-v9-latin-700.svg#Fredoka') format('svg'); /* Legacy iOS */
-}
+/* font */
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&display=swap');
+/* /font */
 
-/* ---------------font--------------------------------- */
 
+/* generale */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Fredoka', sans-serif;
 }
 
 .container{
+  
   width: 80%;
   margin: 0 auto;
 }
@@ -49,18 +28,32 @@
   clear: both;
 }
 
+/* /generale */
+
+/* header */
 header.container{
   height: 150px;
 }
 
 h1 {
-
+  text-align: center;
+  line-height: 150px;
+  color: rgb(228, 47, 111);
+  
 }
 
+/* /header */
+
+/* paragrafo */
 main p {
-  height: 70px;
-  margin: 15px 0;
+  
+  margin: 20px 0;
+  text-align: center;
+  line-height: 25px;
 }
+/* /paragrafo */
+
+/* LIST */
 
 ul .row{
   margin: 0 auto;
@@ -70,18 +63,55 @@ ul{
   list-style: none;
 }
 
+
 ul li.box{
   float:left;
   width: calc(90% / 3);
-  
   height: 100px;
-  margin: 15px 0;
+  margin: 20px 0;
+  background-color: rgb(15, 14, 23);
+  color: white;
+  box-shadow: 0px 0px 10px 3px grey;
+  overflow: auto; 
+  /** 
+  aggiunto overflow perche non so come altro sistemare lo strabordo e mi da fastidio 
+  **/
+  
   
 }
 
+/* margine aggiunto ad ogni terzo elemento a partire dal secondo */
 ul li.box:nth-child(3n + 2){
   margin-right: calc(10% / 2) ;
   margin-left: calc(10% / 2) ;
   
 }
 
+ul li img{
+  height: 100px;
+  width: 100px;
+  float: left;
+  margin-right: 15px;
+}
+
+li span{
+  display: block;
+  padding-top: 8px;
+  
+}
+li span a{
+  text-decoration: none;
+  color: rgb(75, 194, 233);
+  font-size: 0.8em;
+}
+
+.nome-cognome{
+  font-weight: 700;
+  font-size: 1.1em;
+}
+
+.posizione{
+  font-size: 0.9em;
+}
+
+/* /LIST */
